# CoreParseLib

./: .gitignore  CMakeLists.txt  README.md  coreparselib.h  debug.c
TestingDirectory/: sample.json
TestingDirectory/config/: config.json  settings.txt
TestingDirectory/data/: untitled_note.json
lib/json-c-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  libjson-c.so.5.2.0
lib/json-c-build/Testing/Temporary/: CTestCostData.txt
lib/json-c-build/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake  json_parse
lib/json-c-build/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/json-c-build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test1  test1Formatted  test2  test2Formatted  test4  testReplaceExisting  test_cast  test_charcase  test_compare  test_deep_copy  test_double_serializer  test_float  test_int_add  test_int_get  test_json_pointer  test_locale  test_null  test_object_iterator  test_parse  test_parse_int64  test_printbuf  test_set_serializer  test_set_value  test_strerror  test_util_file  test_visit
modules/: common.h
modules/filedir/: file_manage.c  file_manage.h  file_procedures_func.c  file_procedures_func.h
modules/jsonParse/: jsonInsiders.c  jsonInsiders.h  jsonUtils.c  jsonUtils.h
modules/stringUtils/: stringUtils.c  stringUtils.h
src/: common.h  core_string.c  core_string.h  coreparselib.h  dir_management.c  dir_management.h  dir_managment.h  file_management.c  file_management.h  main.c  main.h  string_utils.c  string_utils.h
src/file_dir_module/: dir_management.c  dir_management.h  file_management.c  file_management.h
src/parsing_json_module/: json-manipulation.c  json-manipulation.h
src/string_utils_module/: string_utils.c  string_utils.h
testdir/config/: config.json
testdir/data/: IMPORTANT.json
